Fix a field name in the examples
Manufacturing production examples was invalid because the desk is the
`outputOf' the process now.

--- a/examples/process-manufacturing.yaml
+++ b/examples/process-manufacturing.yaml
@@ -91,7 +91,7 @@
 
   - '@id': mfg:d4d2fd71-34f2-41c3-b1c5-19ad5ed2da59
     '@type': EconomicEvent
-    inputOf: mfg:02b39a30-3e04-4305-9656-7f261aa63c84
+    outputOf: mfg:02b39a30-3e04-4305-9656-7f261aa63c84
     action: produce
     provider: https://manufacturing.example/
     receiver: https://manufacturing.example/
