--- a/mkdocs/mkdocs.yml
+++ b/mkdocs/mkdocs.yml
@@ -42,6 +42,7 @@ nav:
         - Scoping: concepts/scoping.md
         - Conversations: concepts/cfa.md
         - Accounting: concepts/accounting.md
+        - Ecological Accounting: concepts/ecology.md
     - Examples:
         - Agents: examples/ex-agent.md
         - Resources: examples/ex-resource.md
