new actions page with fuller definitions

--- a/mkdocs/mkdocs.yml
+++ b/mkdocs/mkdocs.yml
@@ -31,6 +31,7 @@ nav:
         - Agents: concepts/agents.md
         - Economic Resources: concepts/resources.md
         - Flows: concepts/flows.md
+        - Actions: concepts/actions.md
         - Processes: concepts/processes.md
         - Transfers: concepts/transfers.md
         - Exchanges: concepts/exchanges.md
