adding doc for Units

--- a/mkdocs/mkdocs.yml
+++ b/mkdocs/mkdocs.yml
@@ -26,6 +26,7 @@ nav:
         - Complete Diagram: specification/uml.md
         - VF Specification: specification/vfspec.md
         - Other Namespaces: specification/external-terms.md
+        - Units of Measure: specification/units.md
         - Query Naming: specification/inverses.md
         - GraphQL Reference: specification/graphql.md
     - Concepts:
